Updatet maps and menu titels to fix contrast issues

--- a/main/static/css/menu.css
+++ b/main/static/css/menu.css
@@ -9,13 +9,15 @@
     padding: 30px;
     background: none;
     box-sizing: border-box;
+    margin-top:4rem;
 }
 
 .menu-title { 
     color: #fff;
     text-align: center;
-    margin-top: 50px;
-    /*font-weight: bold;*/
+    padding: 15px 0;
+    z-index: 1000;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 
@@ -116,8 +118,24 @@
     }
 }
 
+@media (min-width: 768px) {
+    .menu-title {
+        font-size: 1.8rem; 
+    }
+}
+
+@media (min-width: 1024px) {
+    .menu-title {
+        font-size: 2.2rem; 
+    }
+}
+
 @media (min-width: 1200px) {
     .menu-box {
         max-width: 800px;
+    }
+
+    .menu-title {
+        padding-bottom: 50px;
     }
 }
